--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -18,6 +18,8 @@ tauri-plugin-shell = "2"
 tauri-plugin-autostart = "2"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
+# Cross-platform brightness (WMI on Windows laptops, DDC/CI via fallback)
+brightness = "0.8"
 # Windows API bindings
 [dependencies.windows]
 version = "0.58"
