--- a/package.json
+++ b/package.json
@@ -7,12 +7,13 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
+    "icons": "node scripts/create-icons.cjs",
     "tauri": "set PATH=%USERPROFILE%\\.cargo\\bin;%PATH% && tauri"
   },
   "dependencies": {
+    "motion": "^11.15.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "motion": "^11.15.0"
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "@tauri-apps/api": "^2.2.0",
@@ -21,7 +22,9 @@
     "@types/react-dom": "^18.3.5",
     "@vitejs/plugin-react": "^4.3.4",
     "autoprefixer": "^10.4.20",
+    "png-to-ico": "^2.1.8",
     "postcss": "^8.4.49",
+    "sharp": "^0.33.5",
     "tailwindcss": "^3.4.17",
     "typescript": "^5.7.3",
     "vite": "^6.0.7"
