--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -17,6 +17,8 @@ tauri = { version = "2", features = ["tray-icon"] }
 tauri-plugin-autostart = "2"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
+once_cell = "1.20"
+reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
 
 # Windows-only deps (Android builds must not pull these)
 [target.'cfg(target_os = "windows")'.dependencies]
